--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -6207,13 +6207,17 @@ a.badge:focus {
     top:31px;
 }
 #menu{
-    position:absolute;
-    top:30px;
+    margin-top:110px;
 }
 #menu ul{
     list-style: none;
 }
 #menu li{
     float:left;
-    padding-right:20px;
+    padding-right:30px;
+}
+#menu a{
+    color:#fff;
+    font-weight: bold;
+    font-size:15px;
 }
