--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -6488,3 +6488,37 @@ h2.tut{
     border:2px solid #fff;
     border-radius: 10px;
 }
+
+.donate{
+    width:200px;
+    height:200px;
+    overflow: hidden;
+    position:relative;
+    margin:5px;
+}
+.donate_layer{
+    position:absolute;
+    top:170px;
+    background-color: #B3121A;
+    left:0px;
+    width:210px;
+    height:210px;
+}
+.donate_layer h5{
+    color:#fff;
+    padding-left:14%;
+    font-size:15px;
+}
+.donate_layer p{
+    padding-left:25%;
+    padding-top:50px;
+    font-size: 18px;
+    color:#fff;
+}
+.donate_icon{
+    border:1px solid #666;
+    width:40px;
+    border-radius: 40px;
+    padding:10px;
+    margin: 50px auto;
+}
