--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -6509,7 +6509,9 @@ nav a{
 }
 nav a:hover{
     text-decoration: none;
-    font-weight: normal
+    font-weight: normal;
+    color:#fff;
+    font-weight: bold;
 }
 nav ul {
   text-align: left;
@@ -6517,18 +6519,20 @@ nav ul {
   margin: 0;
   list-style: none;
 }
+
 nav ul li {
   display: inline-block;
   margin-right: -4px;
   position: relative;
   padding: 0px 10px;
   cursor: pointer;
-  -webkit-transition: all 0.2s;
-  -moz-transition: all 0.2s;
-  -ms-transition: all 0.2s;
-  -o-transition: all 0.2s;
-  transition: all 0.2s;
+  -webkit-transition: all 0.8s;
+  -moz-transition: all 0.8s;
+  -ms-transition: all 0.8s;
+  -o-transition: all 0.8s;
+  transition: all 0.8s;
 }
+
 nav ul li:hover {
 }
 ul li ul {
@@ -6537,7 +6541,7 @@ ul li ul {
   position: absolute;
   top: 20px;
   left: 0;
-  width: 150px;
+  width: 170px;
   display: none;
   opacity: 0;
   visibility: hidden;
@@ -6558,4 +6562,26 @@ nav ul li:hover ul {
   display: block;
   opacity: 1;
   visibility: visible;
+}
+nav ul li ul li ul{
+    display:block;
+    margin-left: 172px;
+    margin-top:-10px;
+}
+
+nav ul li ul li:hover ul li{
+    display:block;
+}
+nav ul li ul li ul li{
+    top:0px;
+    display:none;
+     margin-right: 00px;
+     position: relative;
+     cursor: pointer;
+     -webkit-transition: all 0.8s;
+     -moz-transition: all 0.8s;
+     -ms-transition: all 0.8s;
+     -o-transition: all 0.8s;
+     transition: all 0.8s;  
+     width:150px;
 }
